Updated system message.

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -108,9 +108,8 @@
 				</div>
 				<div id="sys-message" class="ui-widget ui-widget-content ui-corner-all">
 					<b>System Message</b>: 
-					Sept 11 - 
-					<strong>Battle.net Imports now import your paragon level!</strong>
- 					Major system update coming sometime this week(end?), including a new layout and lots of features that have been requested by users.
+					Sept 14 - 
+					Expect the update early next week... few more features popped up that I'll be finishing up over the weekend. This will be the biggest and probably best update the site's ever seen, stay tuned!
 					Please report any bugs/problems/issues to me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>!
 				</div>
 			</div>
