--- a/application/layouts/scripts/d3bit.phtml
+++ b/application/layouts/scripts/d3bit.phtml
@@ -11,9 +11,33 @@
 			->appendFile("/js/skills.js")
 			->appendFile("/js/unmin/calcv2.js")
 	?>
+	<style type="text/css" media="screen">
+	  body {
+	    margin: 0;
+	    padding: 0;
+	  }
+	 .d3bit-card {
+	   width: 360px;
+	   height: 432px;
+	   border: 1px solid #fff;
+	 }
+	 .d3bit-card .filter {
+	   
+	 }
+	</style>
 </head>
 <body>
-  <div class="compare-diff">diff</div>
+  <div class="d3bit-card">
+    <div class="filter">
+      Compare Against: 
+      <select class="compare-slot">
+        <? foreach($this->slots as $slot): ?>
+          <option value='<?=$slot?>'><?= $slot ?></option>
+        <? endforeach ?>
+      </select>
+    </div>
+    <div class="compare-diff">diff</div>
+  </div>
 <script type="text/javascript" charset="utf-8">
 <? if($this->build->passives && $this->build->passives != "null" && count($this->build->passives)): ?>
 var activePassives = <?= json_encode($this->build->passives->export()); ?>;
@@ -26,96 +50,104 @@ var activeActives = <?= json_encode($this->build->actives->export()); ?>;
 var activeActives = [];
 <? endif; ?>  
 var newItem = <?= json_encode($this->item->cleanExport()) ?>,
-    newItemSlot = 'bracers',
+    slot = $(".compare-slot"),
+    newItemSlot = slot.val(),
     calc = new d3up.BuildCalculator,
     items = <?= $this->build->equipment->getGearJson() ?>,
     heroClass = '<?= $this->build->class ?>',
     paragonLevel = <?= $this->build->paragon?:0 ?>,
     activePassiveSkills = {};
-calc.setParagonLevel(paragonLevel); // This has to happen before init, need to fix that.
-calc.init();
-_.each(items, function(data,slot) {
-	calc.setItem(slot, data);
-});  	
-_.each(activePassives, function(v,k) {
-  activePassiveSkills[k] = passives[heroClass][v];
+slot.bind('change', function() {
+  newItemSlot = $(this).val();
+  calcDiff();
 });
-calc.setClass(heroClass);
-calc.setPassives(activePassiveSkills);
-var stats = calc.run(),
-    oldStats = _.extend({}, stats);
-var oldItem = items[newItemSlot];
-calc.init();
-calc.setClass(heroClass);
-calc.setPassives(activePassiveSkills);
-// Add the new item
-// console.log(newItem, newItemSlot);
-_.each(items, function(data,slot) {
-	calc.setItem(slot, data);
-});  	
-calc.removeItem(newItemSlot);
-calc.setPassives(activePassiveSkills);
-calc.parseItem(newItem, newItemSlot);
-// Get new stats
-var newStats = calc.run();
-// calculate the diff
-var diff = calc.diff(oldStats, newStats);
-// Debug the Diff
-// console.log(oldStats, newStats);
-// console.log(calc.diff(oldStats, newStats));
-$(".compare-diff").empty();
-// if(!hideHelpers) {
- var h4 = $("<h4>Comparision Results</h4>").css({margin: 0}),
-     oldLabel = $("<p/>").append("Old Item: ", calc.getItemLink(oldItem)),
-     newLabel = $("<p/>").append("New Item: ", calc.getItemLink(newItem));
-  // if(oldItemOH) {
-  //  oldLabel.append(" + Offhand: ", calc.getItemLink(oldItemOH));
-  // }      
-// }
-$(".compare-diff").append(h4, oldLabel, newLabel);
-// Do we need to add any notices?
-$("#compare-notes").html("");
-// if(notices.length > 0) {
-//  $.each(notices, function(k,v) {
-//    $("#compare-notes").append(v);
-//  });
-// }
-var table = $("<table/>");
-   header = $("<tr/>").append("<th>Stat</th><th>Diff</th><th>Old</th><th>New</th>");
-table.append(header);
-$.each(diff, function(k,v) {
- var data = v.split("|"),
-     diffVal = data[1],
-     diffName = data[0],
-     row = $("<tr/>");
- row.append($("<td/>").html(diffName));
- var oldStat = Math.round(oldStats[k] * 100) / 100,
-     newStat = Math.round(newStats[k] * 100) / 100;
- if(oldStat > 99999) {
-   oldStat = Math.round(oldStat / 10) / 100 + "k";
- }
- if(newStat > 99999) {
-   newStat = Math.round(newStat / 10) / 100 + "k";
- }
- if(diffVal > 0) {
-   row.append($("<td/>").html("+"+diffVal).addClass("pos"));
-   row.append($("<td class='neg'/>").html(oldStat));
-   row.append($("<td class='pos'/>").html(newStat));       
- } else {
-   row.append($("<td/>").html(diffVal).addClass("neg"));
-   row.append($("<td class='pos'/>").html(oldStat));
-   row.append($("<td class='neg'/>").html(newStat));       
- }
- table.append(row);
-});
-table.append("<tr><td colspan='10'><span class='pos'>Green = Increase</span> / <span class='neg'>Red = Decrease</span></td></tr>");
-// } else {
-//   table.append("<tr><td colspan='10' style='text-align: center; font-weight: bold;'>These items are identical.</td></tr>");
-// }
-// items.find("div a").each(function() {
-//   $(this).bindTooltip();
-// });     
-$(".compare-diff").append(table);
+function calcDiff() {
+  calc.setParagonLevel(paragonLevel); // This has to happen before init, need to fix that.
+  calc.init();
+  _.each(items, function(data,slot) {
+  	calc.setItem(slot, data);
+  });  	
+  _.each(activePassives, function(v,k) {
+    activePassiveSkills[k] = passives[heroClass][v];
+  });
+  calc.setClass(heroClass);
+  calc.setPassives(activePassiveSkills);
+  var stats = calc.run(),
+      oldStats = _.extend({}, stats);
+  var oldItem = items[newItemSlot];
+  calc.init();
+  calc.setClass(heroClass);
+  calc.setPassives(activePassiveSkills);
+  // Add the new item
+  // console.log(newItem, newItemSlot);
+  _.each(items, function(data,slot) {
+  	calc.setItem(slot, data);
+  });  	
+  calc.removeItem(newItemSlot);
+  calc.setPassives(activePassiveSkills);
+  calc.parseItem(newItem, newItemSlot);
+  // Get new stats
+  var newStats = calc.run();
+  // calculate the diff
+  var diff = calc.diff(oldStats, newStats);
+  // Debug the Diff
+  // console.log(oldStats, newStats);
+  // console.log(calc.diff(oldStats, newStats));
+  $(".compare-diff").empty();
+  // if(!hideHelpers) {
+   var h4 = $("<h4>Comparision Results</h4>").css({margin: 0}),
+       oldLabel = $("<p/>").append("Old Item: ", calc.getD3BitItemLink(oldItem)),
+       newLabel = $("<p/>").append("New Item: ", calc.getD3BitItemLink(newItem));
+    // if(oldItemOH) {
+    //  oldLabel.append(" + Offhand: ", calc.getItemLink(oldItemOH));
+    // }      
+  // }
+  $(".compare-diff").append(h4, oldLabel, newLabel);
+  // Do we need to add any notices?
+  $("#compare-notes").html("");
+  // if(notices.length > 0) {
+  //  $.each(notices, function(k,v) {
+  //    $("#compare-notes").append(v);
+  //  });
+  // }
+  var table = $("<table/>");
+     header = $("<tr/>").append("<th>Stat</th><th>Diff</th><th>Old</th><th>New</th>");
+  table.append(header);
+  $.each(diff, function(k,v) {
+   var data = v.split("|"),
+       diffVal = data[1],
+       diffName = data[0],
+       row = $("<tr/>");
+   row.append($("<td/>").html(diffName));
+   var oldStat = Math.round(oldStats[k] * 100) / 100,
+       newStat = Math.round(newStats[k] * 100) / 100;
+   if(oldStat > 99999) {
+     oldStat = Math.round(oldStat / 10) / 100 + "k";
+   }
+   if(newStat > 99999) {
+     newStat = Math.round(newStat / 10) / 100 + "k";
+   }
+   if(diffVal > 0) {
+     row.append($("<td/>").html("+"+diffVal).addClass("pos"));
+     row.append($("<td class='neg'/>").html(oldStat));
+     row.append($("<td class='pos'/>").html(newStat));       
+   } else {
+     row.append($("<td/>").html(diffVal).addClass("neg"));
+     row.append($("<td class='pos'/>").html(oldStat));
+     row.append($("<td class='neg'/>").html(newStat));       
+   }
+   table.append(row);
+  });
+  table.append("<tr><td colspan='10'><span class='pos'>Green = Increase</span> / <span class='neg'>Red = Decrease</span></td></tr>");
+  // } else {
+  //   table.append("<tr><td colspan='10' style='text-align: center; font-weight: bold;'>These items are identical.</td></tr>");
+  // }
+  // items.find("div a").each(function() {
+  //   $(this).bindTooltip();
+  // });     
+  $(".compare-diff").append(table);  
+}
+calcDiff();
 </script>
 </body>
 </html>
