--- a/application/layouts/scripts/d3bit.phtml
+++ b/application/layouts/scripts/d3bit.phtml
@@ -12,6 +12,8 @@
 			->appendFile("/js/unmin/calcv2.js")
 	?>
 	<style type="text/css" media="screen">
+	  html, body { overflow: hidden; height: 100% }
+    body { margin:0; padding:0; }
 	  body {
 	    margin: 0;
 	    padding: 0;
